implement login page

--- a/internal/views/documents.html
+++ b/internal/views/documents.html
@@ -1,3 +1,4 @@
+{{ block "documents" .}}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,5 +9,7 @@
   <body>
     <!-- Documents page -->
     <!-- Allow reading of documents -->
+     <p>Documents page</p>
   </body>
 </html>
+{{ end }}
