--- a/internal/views/documents.html
+++ b/internal/views/documents.html
@@ -12,6 +12,7 @@
     <title>IDS | Documents</title>
   </head>
   <body>
+    <a href="/auth/users">View Users</a>
     <h2 style="text-decoration: underline">Documents</h2>
     <table style="border-collapse: collapse; margin: 20px 0">
       <tr style="background-color: #f2f2f2">
