--- a/web/templates/documents.html
+++ b/web/templates/documents.html
@@ -9,11 +9,21 @@
     ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&family=Schoolbell&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/web/css/styles.css" />
     <title>IDS | Documents</title>
   </head>
   <body>
-    <a href="/auth/users">View Users</a>
-    <h2 style="text-decoration: underline">Documents</h2>
+    <nav>
+      <a href="/docs" class="active">Documents</a>
+      <a href="/auth/users">Users</a>
+    </nav>
+
     <table style="border-collapse: collapse; margin: 20px 0">
       <tr style="background-color: #f2f2f2">
         <th style="padding: 12px; border: 1px solid #ccc; text-align: left">
