rename auth routes

--- a/web/templates/documents.html
+++ b/web/templates/documents.html
@@ -21,7 +21,7 @@
   <body>
     <nav>
       <a href="/docs" class="active">Documents</a>
-      <a href="/auth/users">Users</a>
+      <a href="/users">Users</a>
     </nav>
 
     <table style="border-collapse: collapse; margin: 20px 0">
