--- a/web/templates/users.html
+++ b/web/templates/users.html
@@ -21,7 +21,7 @@
   <body>
     <nav>
       <a href="/docs">Documents</a>
-      <a href="/auth/users" class="active">Users</a>
+      <a href="/users" class="active">Users</a>
     </nav>
 
     <p style="color: red">{{ .Error }}</p>
