--- a/web/templates/documents.html
+++ b/web/templates/documents.html
@@ -2,11 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script
+    <script src="/htmx/htmx.min.js"></script>
+    <!-- <script
       src="https://unpkg.com/htmx.org@2.0.4"
       integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
