--- a/web/templates/users.html
+++ b/web/templates/users.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="/htmx/htmx.min.js"></script>
+    <script src="/web/htmx/htmx.min.js"></script>
     <!-- <script
       src="https://unpkg.com/htmx.org@2.0.4"
       integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+"
