--- a/web/templates/documents.html
+++ b/web/templates/documents.html
@@ -23,6 +23,7 @@
     <nav>
       <a href="/docs" class="active">Documents</a>
       <a href="/users">Users</a>
+      <a href="/login">Login</a>
     </nav>
 
     <table style="border-collapse: collapse; margin: 20px 0">
