--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -63,7 +63,21 @@
       </form>
       <p style="color: red">{{ .Error}}</p>
 
-      <section style="margin-top: 28px">
+      <section style="max-width: 450px; width: 100%; margin-top: 30px">
+        <h3 style="text-decoration: underline; font-weight: bold">
+          To Enter the Site
+        </h3>
+        <br />
+
+        <h4>Use this account to login as a guest</h4>
+        <ul>
+          <li>Username: secure21</li>
+          <li>Password: guest12345</li>
+        </ul>
+        <br />
+      </section>
+
+      <section style="max-width: 450px; width: 100%; margin-top: 10px">
         <h3 style="text-decoration: underline; font-weight: bold">
           Tips to Trigger Detections
         </h3>
@@ -106,7 +120,7 @@
             <br />
             <small
               >This would cause an alert to be shown in the browser but it could
-              be used to run malicious code for anyone that clicks a link
+              be used to run malicious code for anyone that clicks the link
             </small>
           </li>
           <li>
