--- a/web/templates/users.html
+++ b/web/templates/users.html
@@ -25,10 +25,12 @@
       <a href="/users" class="active">Users</a>
       <a href="/login">Login</a>
     </nav>
-    
+
     <p style="color: red">{{ .Error }}</p>
     {{ if .Error }}
-    <script>alert("{{ .Error }}");</script>
+    <script>
+      alert("{{ .Error }}");
+    </script>
     {{ end }}
     <table style="border-collapse: collapse; margin: 20px 0">
       <tr style="background-color: #f2f2f2">
@@ -63,6 +65,31 @@
       </tr>
       {{ end }}
     </table>
+
+    <section style="max-width: 450px; width: 100%; margin-top: 30px">
+      <h3 style="text-decoration: underline; font-weight: bold">
+        How to Trigger an Attack
+      </h3>
+      <br />
+
+      <h4>Broken Access Control</h4>
+      <p style="font-style: italic;">This is a way that an attacker or internal member could try to elevate their role to access more permissions</p>
+      <br />
+      <ul>
+        <li>
+          Right click on one of the New Role dropdowns that isn't an admin and click inspect element
+        </li>
+        <li>
+          In the elements section that popped up delete 'disabled' from inside of the select tag
+        </li>
+        <li>
+          Once it's deleted click on the dropdown and change the role to an admin
+        </li>
+        <li>
+          You will now see an alert that confirms that broken access control has been detected
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
 {{ end }}
